pages/estimator/styles.module.scss
@use "../../styles/theme";

.container {
  background-repeat: no-repeat !important;
  background-size: cover !important;
  display: flex;
  flex-direction: column;
  width: 100vw;
  min-height: 100vh;
  justify-content: center;
  align-items: center;
  padding: 32px;
  color: white;
}

.card {
  width: min-content;
  padding: 16px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 2;
  position: relative;
  svg, button {
    margin-top: 8px
  }
}

.head {
  align-self: flex-start;
  position: relative;
  z-index: 2;
}

@media (min-width: 768px) {
  .imageSmall {
    display: none;
  }
  .imageBig {
    display: block;
    width: 70vw;
    max-width: 600px;
  }
}

@media (max-width: 768px) {
  .imageBig {
    display: none;
  }
  .imageSmall {
    display: block;
    width: 70vw;
    max-width: 200px;
  }
  .container button {
    margin-top: 30px;
  }
}

